finished work up to day 73
